# cite-nexus-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test_script.py
.gemini/: settings.json
src/cite_nexus_mcp/: elicitation.py
src/cite_paper_mcp/: server.py
src/pleiades_mcp/: elicitation.py  scholar_api.py  tools.py
